static/css/login.css
:root{
    --background-color:rgba(245, 239, 225, 0.89);
    --text:rgb(255, 162, 0);
    --submit-bg: rgb(255, 162, 0);
    --submit_text:white;
    --form-text:black;
}
.dark-theme{
    --background-color: rgba(19, 10, 0, 0.8);
    --text: white;
    --submit-bg: rgba(255, 145, 0, 0.947);
    --submit_text:white;
    --form-text:white;
}
.box_main{
    display: flex;
    justify-content: center;
}
.box1{
    display: flex;
    justify-content: center;
    align-items: center;
}
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-image: url(../images/dark_img.jpeg);
    background-repeat: round;
    background-size: cover;
}
.heading{
    font-family: 'Crimes Times Six';
    color:  rgb(255, 255, 255);
    font-size: 85px;
    margin-top: 5.5%;
}
.container {
    max-width: 400px;
    margin: 50px auto;
    padding: 20px;
  
    border-radius: 5px;
    background-color: var(--background-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}
h2 {
    text-align: center;
    color: var(--text);
}
input[type="text"], input[type="password"], input[type="submit"] {
    width: 100%;
    padding: 10px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid rgba(255, 145, 0, 0.751);
    color: var(--text);
    border-radius: 4px;
    box-sizing: border-box;
}
input[type="submit"] {
    background-color: var(--submit-bg);
    color: var(--submit_text);
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    width: 100%;
}
form{
    color: var(--form-text);
}
input[type="submit"]:hover {
    background-color: #0056b3;
}
.container form {
    padding: 20px;
}
.container form div {
    margin-bottom: 15px;
}
.container form div label {
    display: block;
    font-weight: bold;
}
.container form div input[type="text"], .container form div input[type="password"] {
    width: calc(100% - 22px);
}
.container form div:last-child {
    margin-bottom: 0;
}
.switch-form {
    text-align: center;
    margin-top: 20px;
}

